--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "ts-node  src/index.ts"
+    "start": "ts-node-dev --files  src/index.ts"
   },
   "author": "",
   "license": "ISC",
@@ -16,10 +16,15 @@
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "joi": "^17.6.0",
+    "jsonwebtoken": "^8.5.1",
+    "jwt": "^0.2.0",
+    "jwt-simple": "^0.5.6",
     "mongodb": "^4.7.0",
     "mongodb-typescript": "^2.2.1"
   },
   "devDependencies": {
+    "@types/jsonwebtoken": "^8.5.8",
+    "@types/jwt-simple": "^0.5.33",
     "@types/mongoose": "^5.11.97",
     "ts-node": "^10.8.2",
     "ts-node-dev": "^2.0.0",
