--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@types/body-parser": "^1.19.2",
     "@types/express": "^4.17.13",
+    "@types/validator": "^13.7.4",
     "body-parser": "^1.20.0",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
@@ -20,7 +21,8 @@
     "jwt": "^0.2.0",
     "jwt-simple": "^0.5.6",
     "mongodb": "^4.7.0",
-    "mongodb-typescript": "^2.2.1"
+    "mongodb-typescript": "^2.2.1",
+    "validator": "^13.7.0"
   },
   "devDependencies": {
     "@types/jsonwebtoken": "^8.5.8",
