--- a/.github/workflows/nodejs.yaml
+++ b/.github/workflows/nodejs.yaml
@@ -20,5 +20,5 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: ${{ matrix.node-version }}
-      - run: npm ci --force
-      - run: npm run build --if-present --force
+      - run: npm ci --f
+      - run: npm run build --if-present --f
