--- a/.github/workflows/nodejs.yaml
+++ b/.github/workflows/nodejs.yaml
@@ -19,6 +19,8 @@ jobs:
       - name: Use Node.js ${{ matrix.node-version }}
         uses: actions/setup-node@v3
         with:
-          node-version: ${{ matrix.node-version }}
-      - run: npm ci --f
-      - run: npm run build --if-present --f
+          node-version: 16.15.1
+      - name: Install Dependencies
+        run: yarn
+      - name: run start command
+        run: npm start --f
