--- a/.github/workflows/nodejs.yaml
+++ b/.github/workflows/nodejs.yaml
@@ -21,6 +21,6 @@ jobs:
         with:
           node-version: 16.15.1
       - name: Install Dependencies
-        run: yarn
+        run: yarn i
       - name: run start command
         run: npm start --f
