--- a/package.json
+++ b/package.json
@@ -22,12 +22,16 @@
     "jwt-simple": "^0.5.6",
     "mongodb": "^4.7.0",
     "mongodb-typescript": "^2.2.1",
-    "validator": "^13.7.0"
+    "validator": "^13.7.0",
+    "webpack": "^5.73.0"
   },
   "devDependencies": {
     "@types/jsonwebtoken": "^8.5.8",
     "@types/jwt-simple": "^0.5.33",
     "@types/mongoose": "^5.11.97",
+    "@typescript-eslint/eslint-plugin": "^5.30.7",
+    "@typescript-eslint/parser": "^5.30.7",
+    "eslint": "^8.20.0",
     "ts-node": "^10.8.2",
     "ts-node-dev": "^2.0.0",
     "typescript": "^4.7.4"
