--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,6 +5,6 @@
     "exclude": ["node_modules"],
     "compilerOptions": {
       // ... rest
-      "typeRoots": ["./node_modules/@types", "./src/types"]
+      "typeRoots": ["./src/types","./node_modules/@types"]
     }
   }
