--- a/.github/workflows/nodejs.yaml
+++ b/.github/workflows/nodejs.yaml
@@ -20,6 +20,7 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: 16.15.1
-    
+      - name: Install Dependencies
+        run:  npm install --force
       - name: run start command
         run: npm start 
