--- a/package.json
+++ b/package.json
@@ -12,18 +12,22 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/bcrypt": "^5.0.0",
     "@types/body-parser": "^1.19.2",
     "@types/express": "^4.17.13",
     "@types/validator": "^13.7.4",
+    "bcrypt": "^5.0.1",
     "body-parser": "^1.20.0",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
+    "i": "^0.3.7",
     "joi": "^17.6.0",
     "jsonwebtoken": "^8.5.1",
     "jwt": "^0.2.0",
     "jwt-simple": "^0.5.6",
     "mongodb": "^4.7.0",
     "mongodb-typescript": "^2.2.1",
+    "npm": "^8.16.0",
     "validator": "^13.7.0",
     "webpack": "^5.73.0"
   },
