--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@sendgrid/mail": "^7.7.0",
     "@types/bcrypt": "^5.0.0",
     "@types/body-parser": "^1.19.2",
     "@types/express": "^4.17.13",
@@ -26,7 +27,7 @@
     "jwt": "^0.2.0",
     "jwt-simple": "^0.5.6",
     "mongodb": "^4.7.0",
-    "mongodb-typescript": "^2.2.1",
+    "mongodb-typescript": "^3.0.0",
     "npm": "^8.16.0",
     "validator": "^13.7.0",
     "webpack": "^5.73.0"
