--- a/package.json
+++ b/package.json
@@ -15,24 +15,37 @@
     "@sendgrid/mail": "^7.7.0",
     "@types/bcrypt": "^5.0.0",
     "@types/body-parser": "^1.19.2",
-    "@types/express": "^4.17.13",
+    "@types/cors": "^2.8.12",
+    "@types/crypto-js": "^4.1.1",
+    "@types/data-urls": "^2.0.1",
+    "@types/express": "^4.17.2",
+    "@types/express-serve-static-core": "4.16.8",
+    "@types/multer": "^1.4.7",
+    "@types/node": "^12.12.5",
     "@types/validator": "^13.7.4",
     "bcrypt": "^5.0.1",
     "body-parser": "^1.20.0",
+    "cloudinary": "^1.30.1",
+    "cors": "^2.8.5",
+    "datauri": "^3.0.0",
     "dotenv": "^16.0.1",
-    "express": "^4.18.1",
+    "express": "^4.17.1",
     "i": "^0.3.7",
+    "jade": "^0.29.0",
     "joi": "^17.6.0",
     "jsonwebtoken": "^8.5.1",
     "jwt": "^0.2.0",
     "jwt-simple": "^0.5.6",
     "mongodb": "^4.7.0",
     "mongodb-typescript": "^3.0.0",
+    "multer": "^1.4.5-lts.1",
     "npm": "^8.16.0",
+    "typescript": "^3.6.4",
     "validator": "^13.7.0",
     "webpack": "^5.73.0"
   },
   "devDependencies": {
+    "@types/express": "^4.17.9",
     "@types/jsonwebtoken": "^8.5.8",
     "@types/jwt-simple": "^0.5.33",
     "@types/mongoose": "^5.11.97",
