--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "mongodb-typescript": "^3.0.0",
     "multer": "^1.4.5-lts.1",
     "npm": "^8.16.0",
+    "stripe": "^10.0.0",
     "typescript": "^3.6.4",
     "validator": "^13.7.0",
     "webpack": "^5.73.0"
