--- a/package.json
+++ b/package.json
@@ -8,14 +8,6 @@
     "start": "ts-node-dev --files src/index.ts",
     "lint": "eslint src/**/*.ts",
     "format": "eslint src/**/*.ts --fix",
-    "husky": {
-      "hooks": {
-        "applypatch-msg": "echo \"[Husky] applypatch-msg\"",
-        "pre-applypatch": "echo \"[Husky] pre-applypatch\"",
-        "post-applypatch": "echo \"[Husky] post-applypatch\"",
-        "pre-commit": "echo \"[Husky] pre-commit\""
-      }
-    }
   },
   "author": "",
   "license": "ISC",
@@ -65,5 +57,10 @@
     "ts-node": "^10.8.2",
     "ts-node-dev": "^2.0.0",
     "typescript": "^4.7.4"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "prettier --write . && git add -A ."
+    }
   }
 }
