--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "ts-node-dev --files src/index.ts",
     "lint": "eslint src/**/*.ts",
-    "format": "eslint src/**/*.ts --fix",
+    "format": "eslint src/**/*.ts --fix"
   },
   "author": "",
   "license": "ISC",
@@ -30,6 +30,7 @@
     "datauri": "^3.0.0",
     "dotenv": "^16.0.1",
     "express": "^4.17.1",
+    "husky": "^8.0.3",
     "i": "^0.3.7",
     "jade": "^0.29.0",
     "joi": "^17.6.0",
