--- a/package.json
+++ b/package.json
@@ -61,7 +61,9 @@
   },
   "husky": {
     "hooks": {
-      "pre-commit": "prettier --write . && git add -A ."
+      "pre-commit": "prettier --write . && git add -A .",
+      "pre-push": "npm test."
+
     }
   }
 }
