--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
     "start": "ts-node-dev --files src/index.ts",
     "lint": "eslint src/**/*.ts",
     "format": "eslint src/**/*.ts --fix",
-    "pre-commit": "eslint . --fix && git add ."
-
+    "pre-commit": "eslint . --fix && git add .",
+    "prepare": "husky install"
   },
   "author": "",
   "license": "ISC",
@@ -55,15 +55,10 @@
     "@typescript-eslint/eslint-plugin": "^5.30.7",
     "@typescript-eslint/parser": "^5.30.7",
     "eslint": "^8.51.0",
-    "husky": "^8.0.3",
+    "husky": "^8.0.0",
     "prettier": "^2.7.1",
     "ts-node": "^10.8.2",
     "ts-node-dev": "^2.0.0",
     "typescript": "^4.7.4"
-  },
-  "husky": {
-    "hooks": {
-      "pre-commit": "npm run pre-commit"
-    }
   }
 }
